--- a/Saliency_Maps.ipynb
+++ b/Saliency_Maps.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOKmuMfihen2tlL2laO0oH7",
+      "authorship_tag": "ABX9TyN/NEnR3cIyfGvch0a6X7HU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Note** ChatGPT and Co-Pilot were used to write up the markdowns for this notebook and also to get the code commented and ordered.\n",
+        "### **Note** ChatGPT and Co-Pilot were used to write the code and interpret the results.\n",
         "\n",
         "# Introduction\n",
         "\n",
@@ -155,7 +155,7 @@
         "id": "GdkvNyckfYX8",
         "outputId": "b7ad3607-47a0-4ba9-c7b1-d9eed69ce9ce"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "kN5WuxtW27NK"
       },
@@ -368,7 +368,7 @@
         "id": "Slz1dNkPfwMz",
         "outputId": "bf885850-f751-4acf-f73f-767311762d07"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +491,7 @@
       "metadata": {
         "id": "xqGvb3bYltb3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +539,7 @@
       "metadata": {
         "id": "t6C-BHFAgeOb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "181h3uZtgiq8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -648,7 +648,7 @@
         "id": "Jh8JTJJ8gpui",
         "outputId": "1cdbdca2-df90-4559-9f89-5ef59195d757"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +724,7 @@
         "id": "AD6HPzeegsfJ",
         "outputId": "30ed820b-a75d-4ed4-90ea-0fb7bc7951a6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
