--- a/Saliency_Maps.ipynb
+++ b/Saliency_Maps.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM8YQip/hYTr/2nnftP+Y1/",
+      "authorship_tag": "ABX9TyNj4vkezZhSCO7hkaYes6IO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Note** ChatGPT and Co-Pilot were used to write the code and for some of the markdowns that explain the code as well.\n",
+        "### **Note** ChatGPT was used to update the (or write new) functions from Dr. Bent's notebook to adapt it to the CIFAR-10 dataset (instead of the imagenet dataset). It was then also used to infer the results and refine the markdowns that explain what the code is doing.\n",
         "\n",
         "# Introduction\n",
         "\n",
